--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -17,7 +17,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw  GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -80,31 +80,31 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     //Don't Change Signing Configs below.
-    signingConfigs {
-       release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
-       }
-    }
-//    buildTypes {
-//         release {
-//             // signingConfig signingConfigs.release
-
-//             // shrinkResources false
-//             // minifyEnabled false         
-//           signingConfig signingConfigs.debug
-//              proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//         }
-
-    buildTypes {
+    // signingConfigs {
+    //    release {
+    //        keyAlias keystoreProperties['keyAlias']
+    //        keyPassword keystoreProperties['keyPassword']
+    //        storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+    //        storePassword keystoreProperties['storePassword']
+    //    }
+    // }
+   buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.release //Change it to signingConfigs.release for release apk
-        }
-    }
+            // signingConfig signingConfigs.release
+
+            // shrinkResources false
+            // minifyEnabled false         
+          signingConfig signingConfigs.debug
+             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }}
+
+    // buildTypes {
+    //     release {
+    //         // TODO: Add your own signing config for the release build.
+    //         // Signing with the debug keys for now, so `flutter run --release` works.
+    //         signingConfig signingConfigs.release //Change it to signingConfigs.release for release apk
+    //     }
+    // }
 } 
 
 flutter {
